# bsn_isync

./: .gitignore  README.md  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: bump-version.js
src/: App.vue  index.css  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  check.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backlog_auth.rs  lib.rs  main.rs  sql_mod.rs  updater.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: AppInLayoutDialogs.vue  AppRootModals.vue  AppRunnerSettingsDialog.vue  AppRunnerTab.vue  AppTopHeader.vue  AppWorkspaceSqlBar.vue  BacklogAuthPanel.vue  HotkeyLabel.vue  HotkeyManager.vue  ProfileHistory.vue  SqlEditor.vue
src/components/backlog/: BacklogAuthPanel.vue
src/components/ui/avatar/: Avatar.vue  AvatarFallback.vue  AvatarImage.vue
src/components/ui/button/: Button.vue
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  (+5 more)
src/composables/: appBindings.ts  useApp.ts  useStore.ts
src/layout/: DefaultLayout.vue
src/lib/: backlogAuth.ts  sync.ts
src/stores/: index.ts  useBacklogStore.ts  useProfileStore.ts  useRunnerStore.ts  useTerminalStore.ts  useUiStore.ts
src/utils/: backlogAuth.ts
sync-worker/: README.md  migration_v2.sql  package.json  reset_database.sql  schema.sql  wrangler.json
sync-worker/src/: index.ts
updater-worker/: package.json  wrangler.toml
updater-worker/src/: index.js
(+25 files in other folders)
